--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am brand new to web development. Self paced learning on the side.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Born in California, raised in New Mexico.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Trying to cook, hiking and watching countless hours of dog videos!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>One that allows me to keep on growing!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Denver, CO</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To expand my opportunities, challenge my mind and continue to be creative visually.</p>
     </section>
 
     <footer id="footer">
